# SpecialProgrammingLabs

./: .gitignore  CMakeLists.txt  Lab2.ipynb  Lab2.py  README.md  build.sh  preinstall.sh  requirements.txt  run.sh
.github/workflows/: cmake.yml
HW6/: README.md  build_run.sh  main.cpp
Lab1(py)/: Lab1.ipynb  Lab1_2.ipynb
Lab2/: Lab2_2.ipynb
Lab2(py)/: .gitignore  requirements.txt
Lab3/: README.md
Lab3/include/: Display.hpp  FrameProcessor.hpp
Lab3/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
Lab4/: .gitignore  CMakeLists.txt  README.md  run.sh  settings.json
Lab4/include/: CameraProvider.hpp  ConfigManager.hpp  Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  IFrameDisplay.hpp  IFrameSource.hpp  KeyProcessor.hpp  Logger.hpp
Lab4/scripts/: build.sh  preinstall.sh  run.sh  run_tests.sh
Lab4/src/: CameraProvider.cpp  ConfigManager.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  Logger.cpp  main.cpp
Lab4/tests/: MockClasses.hpp  test_main.cpp
hw7/: .gitignore
hw7/include/: FrameProcessor.hpp  Logger.hpp
hw7/scripts/: preinstall.sh
hw7/src/: Logger.cpp  main.cpp
include/: CameraProvider.hpp  Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
